[package]
name = "lesson_eight"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buggy"
path = "src/buggy.rs"

[[bin]]
name = "iterclosures"
path = "src/iterclosures.rs"

[dependencies]
