[package]
name = "failure"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
failure = "0.1.5" 
toml = "0.5.3"  
serde_derive = "1.0.101"  

