[package]
name = "wasm_benches"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3.0"
wasm-bindgen = "0.2"

[[bench]]
name = "wasm_benches"
harness = false

[dependencies]
