[package]
name = "mycos_moo_baan"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.10.2"
cursive = { git = "https://github.com/gyscos/cursive" }
