[package]
name = "susu"
version = "0.1.0"
authors = ["MyCos Tech <sales@mycostech.com>"]
edition = "2018"
license = "MIT"
description = "Keep It Simple and Naive like a child"
homepage = "https://github.com/blittable/rustup/tree/susu-db/project/susu"
documentation = "https://github.com/blittable/rustup/tree/susu-db/project/susu"
repository = "https://github.com/blittable/rustup.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "susu"
path = "src/myclap.rs"

[dependencies]
clap = "2.33.0"
criterion = "0.3"
susudb = "1.0.0"

[[bench]]
name = "mybench"
harness = false