[package]
name = "banchmark"
version = "0.1.0"
authors = ["iamkhwan <puttarak555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rocksdb = "0.12.3"
susudb = "1.0.*"
criterion = "0.3"

[[bench]]
name = "susu-benchmark"
harness = false

[[bench]]
name = "rockdb-benchmark"
harness = false